# baby-crawler

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
baby_crawler/: __init__.py  __main__.py  crawler.py  crawler_config.py  crawlerqueue.py  eon.py  exceptions.py  setqueue.py
docker/: README.md
tests/: conftest.py  test_crawler.py  test_crawler_blocking.py
tests/test_example/: test_hello.py
