# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "baby-crawler"
version = "0.1.0"
description = "A simple async website crawler."
readme = "README.md"
authors = [
  "weiss-d <wonder@simonweiss.space>"
]
license = "MIT"
repository = "https://github.com/weiss-d/baby-crawler"
homepage = "https://github.com/weiss-d/baby-crawler"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"baby-crawler" = "baby_crawler.__main__:app"

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = "^1.6.0", python = "<3.8"}
async-timeout = "^3.0.1"
aiohttp = "^3.6.3"
aiofiles = "^0.5.0"
networkx = "^2.5"
gazpacho = "^1.1"
networkx_viewer = "^0.3.0"
numpy = "^1.19.2"
matplotlib = "^3.5.1"
jellyfish = "^0.8.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
darglint = "^1.5.4"
isort = "^5.5.4"
pyupgrade = "^2.7.2"
black = "^20.8b1"
mypy = "^0.782"
bandit = "^1.6.2"
safety = "^1.9.0"
pytest = "^6.0.1"
pylint = "^2.5.3"
pydocstyle = "^5.0.2"
pre-commit = "^2.7.1"
pytest-asyncio = "^0.14.0"
asynctest = "^0.13.0"
ipdb = "^0.13.4"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
